--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+  <header class="header">
+    <h1>Rocktim Rajkumar</h1>
+    <h2>Building Things</h2>
+  </header>
 
   Welcome to the HTML Portfolio Project
   Hello World
